	tem} some exceptions to the warning.)

      \item A dependency on SVN revision is allowed for \code{R},
      e.g. \code{R (>= r56550)}.  This should be used in conjunction with a
      version number, e.g. \code{R (>= 2.14.0), R (>= r56550)} to
      distinguish beteen R-patched and R-devel versions with the same
      SVN revision.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives an error if the \R code in a
      vignette fails to run, unless this is caused by a missing package.

      It now unpacks tarballs in the same way as \command{R CMD
	INSTALL}, including making use of the environment variable
      \env{R_INSTALL_TAR} to override the default behaviour.

      \item \command{R CMD check} now reports what look like methods
      documented with their full names even if there is a namespace and
      they are exported (as this happens a lot with automatically
      constructed namespaces).

      \item The default for the environment variable
      \env{_R_CHECK_COMPACT_DATA2_} is now true: thus if using the newer
      forms of compression introduced in \R 2.10.0 would be beneficial
      is now checked (by default).

      \item \command{R CMD Rd2dvi} allows the use of LaTeX package
      \samp{inputenx} rather than \samp{inputenc}: the value of the
      environment variable \env{RD2DVI_INPUTENC} is used.  (LaTeX package
      \samp{inputenx} is an optional install which provides greater
      coverage of the UTF-8 encoding.)

      \item \command{Rscript} on a Unix-alike now accepts file names
      containing spaces (if these are escaped or quoted in the shell).

      \item \command{R CMD build} on a Unix-alike (only) now tries to
      preserve dates on files it copies from its input directory.  (This
      was the undocumented behaviour prior to \R 2.13.0.)

      \item \command{R CMD check} performs additional code analysis of
      package startup functions, and notifies about incorrect argument